# work-log-synchronizer

./: .gitignore  DEVELOPMENT.md  Makefile  README.md  bamboo-import.user.js  pyproject.toml
.github/workflows/: ci.yml
examples/: USAGE_EXAMPLES.md  mapping.yaml
src/clockify_export/: __init__.py  bamboo_data.py  cli.py  config.py  export.py  mapper.py
src/clockify_export/clockify/: __init__.py  client.py  models.py
src/clockify_export/utils/: __init__.py  logging.py  storage.py
src/work_log_sync/: __init__.py  cli.py  config.py
src/work_log_sync/bamboohr/: __init__.py  client.py  models.py  oauth.py
src/work_log_sync/clockify/: __init__.py  client.py  models.py
src/work_log_sync/sync/: __init__.py  engine.py  mapper.py
src/work_log_sync/utils/: __init__.py  confirmation.py  logging.py  storage.py
tests/: conftest.py  test_bamboo_data.py  test_config.py  test_export.py  test_mapper.py  test_models.py  test_storage.py  test_sync_engine.py
