[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "clockify-export"
version = "0.1.0"
description = "Export Clockify time entries to BambooHR-ready JSON"
readme = "README.md"
requires-python = ">=3.13"
license = {text = "MIT"}
authors = [{name = "Clockify Export"}]
dependencies = [
    "click~=8.1.0",
    "httpx~=0.27.0",
    "pydantic~=2.10.0",
    "pyyaml~=6.0.2",
    "python-dateutil~=2.8.0",
    "rich~=13.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest~=8.0.2",
    "pytest-cov~=4.1.0",
    "ruff~=0.6.9",
    "mypy~=1.13.0",
    "types-PyYAML~=6.0.0",
    "types-python-dateutil~=2.8.0",
]

[project.scripts]
clockify-export = "clockify_export.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/clockify_export"]

[tool.ruff]
line-length = 100
target-version = "py313"
include = ["src/**/*.py", "tests/**/*.py"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # Pyflakes
    "I",    # isort
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "RUF",  # Ruff-specific rules
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["clockify_export"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src/clockify_export --cov-report=html --cov-report=term-missing"
